content/docs/v2020.10.30/reference/google.kubeform.com/ComputeRegionBackendService.md
---
title: ComputeRegionBackendService
menu:
  docs_v2020.10.30:
    identifier: computeregionbackendservice-google.kubeform.com
    name: ComputeRegionBackendService
    parent: google.kubeform.com-reference
    weight: 1
menu_name: docs_v2020.10.30
section_menu_id: reference
info:
  community: v0.3.0
  installer: v0.3.0
  version: v2020.10.30
---

## ComputeRegionBackendService
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `google.kubeform.com/v1alpha1` |
|    `kind` | string | `ComputeRegionBackendService` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[ComputeRegionBackendServiceSpec](#computeregionbackendservicespec)***||
| `status` | ***[ComputeRegionBackendServiceStatus](#computeregionbackendservicestatus)***||
## ComputeRegionBackendServiceSpec

Appears on:[ComputeRegionBackendService](#computeregionbackendservice), [ComputeRegionBackendServiceStatus](#computeregionbackendservicestatus)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `backend` | ***[[]ComputeRegionBackendServiceSpecBackend](#computeregionbackendservicespecbackend)***| ***(Optional)*** |
| `connectionDrainingTimeoutSec` | ***int64***| ***(Optional)*** |
| `description` | ***string***| ***(Optional)*** |
| `fingerprint` | ***string***| ***(Optional)*** |
| `healthChecks` | ***[]string***||
| `loadBalancingScheme` | ***string***| ***(Optional)*** |
| `name` | ***string***||
| `project` | ***string***| ***(Optional)*** |
| `protocol` | ***string***| ***(Optional)*** |
| `region` | ***string***| ***(Optional)*** |
| `selfLink` | ***string***| ***(Optional)*** |
| `sessionAffinity` | ***string***| ***(Optional)*** |
| `timeoutSec` | ***int64***| ***(Optional)*** |
## ComputeRegionBackendServiceSpecBackend

Appears on:[ComputeRegionBackendServiceSpec](#computeregionbackendservicespec)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `description` | ***string***| ***(Optional)*** |
| `group` | ***string***| ***(Optional)*** |
## ComputeRegionBackendServiceStatus

Appears on:[ComputeRegionBackendService](#computeregionbackendservice)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[ComputeRegionBackendServiceSpec](#computeregionbackendservicespec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis/base/v1alpha1.State***| ***(Optional)*** |
| `phase` | ***[Phase](#phase)***| ***(Optional)*** |
## Phase(`string` alias)

Appears on:[ComputeRegionBackendServiceStatus](#computeregionbackendservicestatus)

---
